--- a/misc/gnome-user-docs/Makefile
+++ b/misc/gnome-user-docs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.3 2006/06/11 13:58:48 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2006/09/15 15:23:39 jmmv Exp $
 #
 
-DISTNAME=	gnome-user-docs-2.16.0
+DISTNAME=	gnome-user-docs-2.18.0
 CATEGORIES=	misc
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-user-docs/2.16/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-user-docs/2.18/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
