--- a/games/cgoban-java/Makefile
+++ b/games/cgoban-java/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.35 2006/10/16 10:46:53 salo Exp $
+# $NetBSD: Makefile,v 1.36 2007/01/16 20:53:59 rillig Exp $
 #
 
-DISTNAME=	cgoban-java-3.3.13
+DISTNAME=	cgoban-java-3.3.16
 CATEGORIES=	games java
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 # Mirrored from http://files.gokgs.com/javaBin/cgoban.jar
 EXTRACT_SUFX=	.jar
 
 MAINTAINER=	rh@NetBSD.org
-HOMEPAGE=	http://kgs.kiseido.com/en_US/download.html
+HOMEPAGE=	http://www.gokgs.com/
 COMMENT=	Client for the Kiseido Go Server and SGF viewer/editor
 
 WRKSRC=		${WRKDIR}
