--- a/x11/xev/Makefile
+++ b/x11/xev/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/12/19 01:27:57 reed Exp $
 #
 
 DISTNAME=	xev-1.0.2
@@ -6,7 +6,7 @@ CATEGORIES=	x11
 MASTER_SITES=	http://xorg.freedesktop.org/releases/individual/app/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	pkgsrc-users@NetBSD.org
+MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://xorg.freedesktop.org/releases/individual/app/
 COMMENT=	Display X events
 
