--- a/devel/py-gobject/Makefile
+++ b/devel/py-gobject/Makefile
@@ -1,9 +1,16 @@
-# $NetBSD: Makefile,v 1.8 2006/10/12 13:52:14 drochner Exp $
+# $NetBSD: Makefile,v 1.9 2007/01/14 23:43:25 wiz Exp $
 #
 
 PKGNAME=		${PYPKGPREFIX}-gobject-2.12.3
 
+PKGREVISION=	1
+
 .include "Makefile.common"
+
+post-patch:
+	${SED} "s|@PYGTKCODEGEN@|${PREFIX}/share/pygtk/2.0|" \
+	<${WRKSRC}/dsextras.py >${WRKSRC}/dsextras.py.tmp \
+	&& ${MV} ${WRKSRC}/dsextras.py.tmp ${WRKSRC}/dsextras.py
 
 .include "../../lang/python/extension.mk"
 .include "../../devel/py-gobject-shared/buildlink3.mk"
