--- a/devel/libbonoboui/Makefile
+++ b/devel/libbonoboui/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.55 2006/09/16 12:20:32 jmmv Exp $
+# $NetBSD: Makefile,v 1.56 2006/11/05 17:49:33 joerg Exp $
 #
 
-DISTNAME=	libbonoboui-2.16.0
-PKGREVISION=	1
+DISTNAME=	libbonoboui-2.18.0
 CATEGORIES=	devel gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libbonoboui/2.16/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libbonoboui/2.18/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
