--- a/sysutils/gnome-menus/Makefile
+++ b/sysutils/gnome-menus/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.26 2006/09/16 12:20:32 jmmv Exp $
+# $NetBSD: Makefile,v 1.27 2006/10/22 21:39:52 wiz Exp $
 #
 
-DISTNAME=	gnome-menus-2.16.1
+DISTNAME=	gnome-menus-2.18.0
 CATEGORIES=	sysutils gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-menus/2.16/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-menus/2.18/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
