--- a/x11/xf86-video-ati/Makefile
+++ b/x11/xf86-video-ati/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2006/11/14 17:18:50 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/11/14 17:24:33 reed Exp $
 
 DISTNAME=	xf86-video-ati-6.6.3
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	http://xorg.freedesktop.org/releases/individual/driver/
 EXTRACT_SUFX=	.tar.bz2
