--- a/mail/evolution-data-server/Makefile
+++ b/mail/evolution-data-server/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.51 2007/01/18 15:22:15 tonio Exp $
+# $NetBSD: Makefile,v 1.52 2007/03/21 12:05:48 wiz Exp $
 #
 
-DISTNAME=	evolution-data-server-1.8.2
-PKGREVISION=	1
+DISTNAME=	evolution-data-server-1.10.1
 CATEGORIES=	mail gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution-data-server/1.8/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution-data-server/1.10/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
