--- a/www/p5-Jemplate/Makefile
+++ b/www/p5-Jemplate/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2006/07/17 17:51:03 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2007/04/01 01:58:38 obache Exp $
 
-DISTNAME=	Jemplate-0.18
+DISTNAME=	Jemplate-0.20
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	www perl5
 MASTER_SITES=	http://search.cpan.org/CPAN/authors/id/I/IN/INGY/
@@ -10,6 +10,7 @@ HOMEPAGE=	http://search.cpan.org/~ingy/Jemplate/
 COMMENT=	Javascript Templating with Template Toolkit
 
 DEPENDS+=	p5-Template-Toolkit>=2.14:../../www/p5-Template-Toolkit
+DEPENDS+=	p5-File-Find-Rule>=0.30:../../devel/p5-File-Find-Rule
 
 PERL5_PACKLIST=		auto/Jemplate/.packlist
 
