--- a/www/epiphany/Makefile
+++ b/www/epiphany/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.69 2007/01/14 10:34:53 joerg Exp $
+# $NetBSD: Makefile,v 1.70 2007/03/21 12:05:54 wiz Exp $
 #
 
-DISTNAME=	epiphany-2.16.2
-PKGREVISION=	1
+DISTNAME=	epiphany-2.18.1
 CATEGORIES=	www gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/epiphany/2.16/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/epiphany/2.18/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
