--- a/print/evince/Makefile
+++ b/print/evince/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.28 2007/01/10 16:58:32 joerg Exp $
+# $NetBSD: Makefile,v 1.29 2007/03/21 12:05:51 wiz Exp $
 #
 
 .include "../../print/evince/Makefile.common"
-PKGREVISION=		3
 
 COMMENT=		Document viewer for the GNOME Desktop
 
 GCONF2_SCHEMAS=		evince.schemas
 GCONF2_SCHEMAS+=	evince-thumbnailer.schemas
+GCONF2_SCHEMAS+=	evince-thumbnailer-ps.schemas
 
 PKG_OPTIONS_VAR=	PKG_OPTIONS.evince
 PKG_SUPPORTED_OPTIONS=	dvi djvu
