--- a/devel/rpc2/Makefile
+++ b/devel/rpc2/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2005/08/15 01:20:23 xtraeme Exp $
+# $NetBSD: Makefile,v 1.25 2006/02/05 23:08:52 joerg Exp $
 #
 
-DISTNAME=	rpc2-1.27
-PKGREVISION=	1
+DISTNAME=	rpc2-2.5
 CATEGORIES=	devel
 MASTER_SITES=	http://www.coda.cs.cmu.edu/pub/coda/src/
 
