--- a/editors/gconf-editor/Makefile
+++ b/editors/gconf-editor/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.51 2006/09/16 12:20:36 jmmv Exp $
+# $NetBSD: Makefile,v 1.52 2007/03/21 12:05:44 wiz Exp $
 #
 
-DISTNAME=		gconf-editor-2.16.0
-PKGREVISION=		2
+DISTNAME=		gconf-editor-2.18.0
 CATEGORIES=		editors gnome
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gconf-editor/2.16/}
+MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gconf-editor/2.18/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
