--- a/devel/rvm/Makefile
+++ b/devel/rvm/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2005/08/15 01:26:14 xtraeme Exp $
+# $NetBSD: Makefile,v 1.20 2006/02/05 23:08:53 joerg Exp $
 #
 
-DISTNAME=	rvm-1.11
-PKGREVISION=	1
+DISTNAME=	rvm-1.14
 CATEGORIES=	devel
 MASTER_SITES=	http://ftp.coda.cs.cmu.edu/pub/rvm/src/
 
